# practice-ml-python-docker

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  docker-compose.yml
src/deep-learning-from-scratch-2/: README.md  pyproject.toml
src/deep-learning-from-scratch-2/ch04/: cbow.py  eval.py  gensim_jp.py
src/deep-learning-from-scratch-2/ch07/: generate_better_text.py
